--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.12.2",
     "ejs": "1.0",
     "express": "^4.12.3",
+    "mysql": "^2.18.1",
     "socket.io": "1.0"
   }
 }
